# TinyRender

./: .gitignore  CMakeLists.txt  GMath.cpp  GMath.h  README.md  draw.h  main.cpp  model.cpp  model.h  mvp.cpp  mvp.h  tgaimage.cpp  tgaimage.h
image/: output.tga
